updating service-worker

--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,12 @@
       "src": "static/icons/512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "static/icons/maskable_icon.png",
+      "sizes": "682x682",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
